--- a/Index.Html
+++ b/Index.Html
@@ -260,36 +260,37 @@ chef in their own kitchen</h2>
           <p>Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqut enim ad minim </p>
         </div>
         <div class="butt7">
-          
           <input type="email">
         <button>Suscribe</button>
       </div>
        </Section>
+       <!-- footer -->
        <footer>
-        <section>
-          <div>
-            <div>
+        <section class="foot1">
+          <div class="foot2">
+            <div class="foot3">
               <h4>Foodieland.</h4>
               <p>Lorem ipsum dolor sit amet, consectetuipisicing elit, </p>
             </div>
           <div>
-            <ul class="list">
+            <ul class="list2">
             <li>Recipes</li>
-            <li>blog</li>
-            <li>contact</li>
+            <li>Blog</li>
+            <li>Contact</li>
             <li>About us</li>
           </ul>
           </div>
           </div>
-          <div>
+          <div class="downpart1">
             © 2020 Flowbase. Powered by Webflow
           </div>
-          <div class="image">
-            <img src="./001-facebook.png" alt="" />
+          <div class="list3">
+            <div class="list4">
+              <img src="./001-facebook.png" alt="" />
             <img src="./003-twitter.png" alt="" />
             <img src="./004-instagram.png" alt="" />
           </div>
-          
+        </div>
         </section>
        </footer>
   </main>
