--- a/Index.Html
+++ b/Index.Html
@@ -250,7 +250,11 @@ chef in their own kitchen</h2>
 </div>
         </div>
         <div class="image2">
-          <img src="./portrait-happy-male-chef-dressed-uniform 1.jpg" alt="">
+          <img class="i1" src="./portrait-happy-male-chef-dressed-uniform 1.jpg" alt="">
+          <img class="i2" src="./image 20.jpg" alt="">
+          <img clsss="i3" src="./image 21.png" alt="">
+          <img class="i4" src="./image 27.png" alt="">
+          <img class="i5" src="./image 28.png" alt="">
         </div>
        </Section>
        <!-- Section5 -->
@@ -258,11 +262,14 @@ chef in their own kitchen</h2>
         <div class="part5">
           <h4>Deliciousness to your inbox</h4>
           <p>Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqut enim ad minim </p>
-        </div>
-        <div class="butt7">
-          <input type="email">
-        <button>Suscribe</button>
-      </div>
+        <form  class=" form1" action="">
+            <input type="email" name="" id=""  class="email1" value="Your email address..." />
+            <input type="submit" value="Subscribe" class="button" />
+          </form>
+          <!-- <img class="i6" src="./3c607ae1aa6507db237db4c1275d01f53b014a9d.png" alt="">
+          <img class="i7" src="./afef07d88f7de7b3c817ff8088ad78285106b28f.png" alt="">
+          <img class="i8"src="./8611b9ea379740566aa52fc8d9b6fc007b91b632.png" alt=""> -->
+     </div>
        </Section>
        <!-- footer -->
        <footer>
@@ -281,16 +288,16 @@ chef in their own kitchen</h2>
           </ul>
           </div>
           </div>
-          <div class="downpart1">
-            © 2020 Flowbase. Powered by Webflow
-          </div>
-          <div class="list3">
-            <div class="list4">
-              <img src="./001-facebook.png" alt="" />
+          <section class="downpart1">
+            <section class="down1">
+                <p>© 2020 Flowbase. Powered by Webflow</p>
+              </section>
+          <section class="list4">
+            <img src="./001-facebook.png" alt="" />
             <img src="./003-twitter.png" alt="" />
             <img src="./004-instagram.png" alt="" />
-          </div>
-        </div>
+          </section>
+          </section>
         </section>
        </footer>
   </main>
