--- a/Index.Html
+++ b/Index.Html
@@ -11,7 +11,6 @@
       <header class="menu">
         <nav class="menu1">
           <h2>Foodieland</h2>
-
           <ul class="list">
             <li>Home</li>
             <li>Recipes</li>
@@ -19,7 +18,6 @@
             <li>contact</li>
             <li>About us</li>
           </ul>
-
           <div class="image">
             <img src="./001-facebook.png" alt="" />
             <img src="./003-twitter.png" alt="" />
@@ -29,6 +27,8 @@
       </header>
       <!-- Section1 -->
       <section class="Section1">
+        <img src="" alt="">
+        <img src="" alt="">
         <div class="part1">
           <div class="butt1">
             <a>
